Completed Code updates

--- a/babel_repl_clone/src/App.css
+++ b/babel_repl_clone/src/App.css
@@ -1,38 +1,59 @@
-.App {
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body {
+  padding: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #f7f7f7;
+}
+h1 {
   text-align: center;
+  margin-bottom: 10px;
+}
+.input,
+.output {
+  display: inline-block;
+  width: 50%;
+  height: 80vh;
+}
+.input {
+  position: relative;
+}
+.input-box,
+.output-box {
+  background: #fff;
+  border: 1px solid #ccc;
+  width: 97%;
+  height: 100%;
+  resize: none;
+  display: inline-block;
+  padding: 0 4px;
+  min-height: 1px;
+  font-family: monospace;
+  font-size: 16px;
+  line-height: 1.5;
+  vertical-align: top;
+}
+.input-box:focus,
+.output-box:focus {
+  outline: none;
+}
+.error {
+  position: absolute;
+  z-index: 1;
+  width: 97%;
+  left: 0;
+  bottom: 0;
+  border: 1px solid #ccc;
+}
+.errorMsg {
+  background: #fff0f0;
+  color: #ff0000;
+  font-size: 16px;
+  white-space: pre-wrap;
+  padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
